<resources>
    <string name="app_name">Ashirvad Billing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="next">NEXT</string>
    <string name="sample">Sample</string>
    <string name="todo">TODO</string>
    <string name="qty">Qty</string>
    <string name="rate">rate</string>
    <string name="amount">Amount</string>
    <string name="item_name_long_abcde">Item name long abcde</string>
    <string name="sn">SN</string>
    <string name="total">Total</string>
    <string name="nos">Nos</string>
    <string name="item_name">Item Name</string>
</resources>